integrate SnapStart